--- a/README.text
+++ b/README.text
@@ -1,5 +1,15 @@
-
 //direction rtl
 npm install stylis stylis-plugin-rtl
 
 
+//Pages
+1. login - registre - forget pass //Amir
+2. courses detil - news detail  //Naghme
+3. courses list - news list  //Amir
+4. menuBar
+5. mouse animation
+
+
+//UI-UX
+1.filtering
+2.Panel
