--- a/README.text
+++ b/README.text
@@ -10,6 +10,9 @@ import router
 //router
 npm i react-router-dom
 
+//formik
+npm i formik
+
 //Pages
 1. login - registre - forget pass //Amir
 2. courses detil - news detail  //Naghme
@@ -21,3 +24,4 @@ npm i react-router-dom
 //UI-UX
 1.filtering
 2.Panel
+
